Add interactive Figure 2

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -180,7 +180,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 2. Variable flip angle steady sate signal curves (Eq. 2) for three different T<sub>1</sub> values, approximating the main types of tissue in the brain.\n",
+    "Figure 2. Variable flip angle steady state signal curves (Eq. 2) for three different T<sub>1</sub> values, approximating the main types of tissue in the brain. TR values range from 5 to 200 ms (slider).\n",
     "</b>\n",
     "</p>\n",
     "</div>"
@@ -210,44 +210,38 @@
    "outputs": [],
    "source": [
     "%% MATLAB/OCTAVE CODE\n",
-    "% Code used to generate the data required for Figure 2 of the blog post\n",
+    "% Code used to generate the data required for Figure 4 of the blog post\n",
     "\n",
     "clear all\n",
     "\n",
     "%% Setup parameters\n",
-    "% All times are in seconds\n",
+    "% All times are in milliseconds\n",
     "% All flip angles are in degrees\n",
     "\n",
-    "params.TR = 5.0;\n",
-    "params.TI = linspace(0.001, params.TR, 1000);\n",
-    "            \n",
-    "params.TE = 0.004;\n",
-    "params.T2 = 0.040;\n",
-    "            \n",
-    "params.EXC_FA = 90;  % Excitation flip angle\n",
-    "params.INV_FA = 180; % Inversion flip angle\n",
+    "TR_range = 5:5:200;\n",
     "\n",
-    "params.signalConstant = 1;\n",
+    "params.EXC_FA = 1:90;\n",
     "\n",
     "%% Calculate signals\n",
     "%\n",
-    "% The option 'GRE-IR' selects the analytical equations for the gradient echo readout inversion recovery experiment\n",
-    "% The option '4' is a flag that selects the long TR approximation of the analytical solution (TR>>T1), Eq. 3 of the blog post.\n",
-    "%\n",
-    "% To see all the options available, run `help inversion_recovery.analytical_solution`\n",
+    "% To see all the options available, run `help vfa_t1.analytical_solution`\n",
     "\n",
-    "% White matter\n",
-    "params.T1 = 0.900; % in seconds\n",
+    "for ii = 1:length(TR_range)\n",
+    "    params.TR = TR_range(ii);\n",
+    "    \n",
+    "    % White matter\n",
+    "    params.T1 = 900; % in milliseconds\n",
     "\n",
-    "signal_WM = inversion_recovery.analytical_solution(params, 'GRE-IR', 4);\n",
+    "    signal_WM(ii,:) = vfa_t1.analytical_solution(params);\n",
     "\n",
-    "% Grey matter\n",
-    "params.T1 = 1.500;  % in seconds\n",
-    "signal_GM = inversion_recovery.analytical_solution(params, 'GRE-IR', 4);\n",
+    "    % Grey matter\n",
+    "    params.T1 = 1500;  % in milliseconds\n",
+    "    signal_GM(ii,:) = vfa_t1.analytical_solution(params);\n",
     "\n",
-    "% CSF\n",
-    "params.T1 = 4.000;  % in seconds\n",
-    "signal_CSF = inversion_recovery.analytical_solution(params, 'GRE-IR', 4);"
+    "    % CSF\n",
+    "    params.T1 = 4000;  % in milliseconds\n",
+    "    signal_CSF(ii,:) = vfa_t1.analytical_solution(params);\n",
+    "end\n"
    ]
   },
   {
@@ -262,6 +256,7 @@
    "outputs": [],
    "source": [
     "%get params --from Octave\n",
+    "%get TR_range --from Octave\n",
     "%get signal_WM --from Octave\n",
     "%get signal_GM --from Octave\n",
     "%get signal_CSF --from Octave"
@@ -282,50 +277,76 @@
     "# PYTHON CODE\n",
     "\n",
     "init_notebook_mode(connected=True)\n",
-    "# The polling here is to ensure that plotly.js has already been loaded before\n",
-    "# setting display alignment in order to avoid a race condition.\n",
     "\n",
-    "wm = go.Scatter(\n",
-    "    x = params[\"TI\"],\n",
-    "    y = signal_WM,\n",
-    "    name = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
-    "    text = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
-    "    hoverinfo = 'x+y+text'\n",
-    ")\n",
+    "data1 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_WM[ii]))),\n",
+    "        name = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
+    "        text = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR_range))]\n",
     "\n",
-    "gm = go.Scatter(\n",
-    "    x = params[\"TI\"],\n",
-    "    y = signal_GM,\n",
-    "    name = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
-    "    text = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
-    "    hoverinfo = 'x+y+text'\n",
-    ")\n",
+    "data1[4]['visible'] = True\n",
     "\n",
-    "csf = go.Scatter(\n",
-    "    x = params[\"TI\"],\n",
-    "    y = signal_CSF,\n",
-    "    name = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
-    "    text = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
-    "    hoverinfo = 'x+y+text'\n",
-    ")\n",
+    "data2 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_GM[ii]))),\n",
+    "        name = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
+    "        text = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR_range))]\n",
     "\n",
-    "data = [wm, gm, csf]\n",
+    "data2[4]['visible'] = True\n",
+    "\n",
+    "data3 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_CSF[ii]))),\n",
+    "        name = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
+    "        text = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR_range))]\n",
+    "\n",
+    "data3[4]['visible'] = True\n",
+    "\n",
+    "data = data1 + data2 + data3\n",
+    "\n",
+    "steps = []\n",
+    "for i in range(len(TR_range)):\n",
+    "    step = dict(\n",
+    "        method = 'restyle',  \n",
+    "        args = ['visible', [False] * len(data1)],\n",
+    "        label = str(TR_range[i])\n",
+    "        )\n",
+    "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
+    "    steps.append(step)\n",
+    "\n",
+    "sliders = [dict(\n",
+    "    x = 0,\n",
+    "    y = -0.02,\n",
+    "    active = 2,\n",
+    "    currentvalue = {\"prefix\": \"TR value (ms): <b>\"},\n",
+    "    pad = {\"t\": 50, \"b\": 10},\n",
+    "    steps = steps\n",
+    ")]\n",
     "\n",
     "layout = go.Layout(\n",
-    "    width=600,\n",
-    "    height=350,\n",
+    "    width=580,\n",
+    "    height=450,\n",
     "    margin=go.layout.Margin(\n",
-    "        l=100,\n",
-    "        r=50,\n",
+    "        l=80,\n",
+    "        r=40,\n",
     "        b=60,\n",
-    "        t=0,\n",
+    "        t=10,\n",
     "    ),\n",
     "    annotations=[\n",
     "        dict(\n",
     "            x=0.5004254919715793,\n",
-    "            y=-0.175,\n",
+    "            y=-0.18,\n",
     "            showarrow=False,\n",
-    "            text='Inversion Time – TI (ms)',\n",
+    "            text='Excitation Flip Angle (°)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -335,7 +356,7 @@
     "        ),\n",
     "        dict(\n",
     "            x=-0.15,\n",
-    "            y=0.50,\n",
+    "            y=0.5,\n",
     "            showarrow=False,\n",
     "            text='Long. Magnetization (M<sub>z</sub>)',\n",
     "            font=dict(\n",
@@ -348,18 +369,21 @@
     "        ),\n",
     "    ],\n",
     "    xaxis=dict(\n",
+    "        autorange=False,\n",
+    "        range=[0, params['EXC_FA'][-1]],\n",
     "        showgrid=False,\n",
     "        linecolor='black',\n",
     "        linewidth=2\n",
     "    ),\n",
     "    yaxis=dict(\n",
+    "        autorange=True,\n",
     "        showgrid=False,\n",
     "        linecolor='black',\n",
     "        linewidth=2\n",
     "    ),\n",
     "    legend=dict(\n",
-    "        x=0.55,\n",
-    "        y=0.15,\n",
+    "        x=0.5,\n",
+    "        y=0.9,\n",
     "        traceorder='normal',\n",
     "        font=dict(\n",
     "            family='Times New Roman',\n",
@@ -368,21 +392,13 @@
     "        ),\n",
     "        bordercolor='#000000',\n",
     "        borderwidth=2\n",
-    "    )\n",
+    "    ), \n",
+    "    sliders=sliders\n",
     ")\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
     "\n",
     "iplot(fig, filename = 'basic-line', config = config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "source": [
-    "<center> <h2 style=\"font-family:timesnewroman;font-size:30px\">Data Fitting</h2> </center>"
    ]
   },
   {
