Add processing for brain T1 map figure

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -465,9 +465,9 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Download inversion recovery brain MRI data for Figure 5 of the blog post\n",
     "\n",
-    "cmd = ['curl -L -o ir_brain.zip https://osf.io/ezv74/download/'];\n",
+    "cmd = ['curl -L -o vfa_brain.zip https://osf.io/wj6eg/download/'];\n",
     "[STATUS,MESSAGE] = unix(cmd);\n",
-    "unzip('ir_brain.zip');\n"
+    "unzip('vfa_brain.zip');\n"
    ]
   },
   {
@@ -484,21 +484,22 @@
     "clear all\n",
     "\n",
     "% Load data into environment, and rotate mask to be aligned with IR data\n",
-    "load('IRData.mat');\n",
-    "load('IRMask.mat');\n",
-    "\n",
-    "IRData = data;\n",
-    "Mask = imrotate(Mask,180);\n",
-    "clear data\n",
+    "load('VFAData.mat');\n",
+    "load('B1map.mat');\n",
+    "load('Mask.mat');\n",
     "\n",
     "% Format qMRLab inversion_recovery model parameters, and load them into the Model object\n",
-    "Model = inversion_recovery; \n",
-    "TI = [30; 530; 1030; 1530];\n",
-    "Model.Prot.IRData.Mat = [TI];\n",
+    "Model = vfa_t1; \n",
+    "FlipAngle = [    3;     20];\n",
+    "TR        = [0.015; 0.0150];\n",
+    "\n",
+    "\n",
+    "Model.Prot.VFAData.Mat = [FlipAngle, TR];\n",
     "\n",
     "% Format data structure so that they may be fit by the model\n",
     "data = struct();\n",
-    "data.IRData= double(IRData);\n",
+    "data.VFAData= double(VFAData);\n",
+    "data.B1map= double(B1map);\n",
     "data.Mask= double(Mask);\n",
     "\n",
     "FitResults = FitData(data,Model,0); % The '0' flag is so that no wait bar is shown."
@@ -516,14 +517,17 @@
     "% Code used to re-orient the images to make pretty figures, and to assign variables with the axis lengths.\n",
     "\n",
     "T1_map = imrotate(FitResults.T1.*Mask,-90);\n",
+    "T1_map(T1_map>5)=0;\n",
+    "T1_map = T1_map*1000; % Convert to ms\n",
+    "\n",
     "xAxis = [0:size(T1_map,2)-1];\n",
     "yAxis = [0:size(T1_map,1)-1];\n",
     "\n",
     "% Raw MRI data at different TI values\n",
-    "TI_0030 = imrotate(squeeze(IRData(:,:,:,1).*Mask),-90);\n",
-    "TI_0530 = imrotate(squeeze(IRData(:,:,:,2).*Mask),-90);\n",
-    "TI_1030 = imrotate(squeeze(IRData(:,:,:,3).*Mask),-90);\n",
-    "TI_1530 = imrotate(squeeze(IRData(:,:,:,4).*Mask),-90);"
+    "FA_03 = imrotate(squeeze(VFAData(:,:,:,1).*Mask),-90);\n",
+    "FA_20 = imrotate(squeeze(VFAData(:,:,:,2).*Mask),-90);\n",
+    "B1map = imrotate(squeeze(B1map.*Mask),-90);\n",
+    "\n"
    ]
   },
   {
@@ -538,10 +542,9 @@
    "outputs": [],
    "source": [
     "%get T1_map --from Octave\n",
-    "%get TI_0030 --from Octave\n",
-    "%get TI_0530 --from Octave\n",
-    "%get TI_1030 --from Octave\n",
-    "%get TI_1530 --from Octave\n",
+    "%get FA_03 --from Octave\n",
+    "%get FA_20 --from Octave\n",
+    "%get B1map --from Octave\n",
     "%get xAxis --from Octave\n",
     "%get yAxis --from Octave"
    ]
@@ -559,48 +562,46 @@
    "outputs": [],
    "source": [
     "from plotly import tools\n",
+    "\n",
     "trace1 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=TI_0030,\n",
+    "                   z=FA_03,\n",
     "                   colorscale='Greys',\n",
     "                   showscale = False,\n",
     "                   visible=False,\n",
     "                   name = 'Signal')\n",
     "trace2 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=TI_0530,\n",
-    "                   colorscale='Greys',\n",
-    "                   showscale = False,\n",
-    "                   visible=False,\n",
-    "                   name = 'Signal')\n",
-    "trace3 = go.Heatmap(x = xAxis,\n",
-    "                   y = yAxis,\n",
-    "                   z=TI_1030,\n",
+    "                   z=FA_20,\n",
     "                   colorscale='Greys',\n",
     "                   showscale = False,\n",
     "                   visible=True,\n",
     "                   name = 'Signal')\n",
-    "trace4 = go.Heatmap(x = xAxis,\n",
+    "trace3 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=TI_1530,\n",
-    "                   colorscale='Greys',\n",
-    "                   visible=False,\n",
+    "                   z=B1map,\n",
+    "                   zmin=0.7,\n",
+    "                   zmax=1.3,\n",
+    "                   colorscale='RdBu',\n",
     "                   showscale = False,\n",
+    "                   visible=False,\n",
     "                   name = 'Signal')\n",
     "trace5 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
     "                   z=T1_map,\n",
+    "                   zmin=0.0,\n",
+    "                   zmax=5000,\n",
     "                   colorscale='Portland',\n",
     "                   xaxis='x2',\n",
     "                   yaxis='y2',\n",
     "                   visible=True,\n",
     "                   name = 'T1 values (ms)')\n",
     "\n",
-    "data=[trace1, trace2, trace3, trace4, trace5]\n",
+    "data=[trace1, trace2, trace3, trace5]\n",
     "\n",
     "\n",
     "updatemenus = list([\n",
-    "    dict(active=2,\n",
+    "    dict(active=1,\n",
     "         x = 0.12,\n",
     "         xanchor = 'left',\n",
     "         y = -0.15,\n",
@@ -611,23 +612,19 @@
     "                size=16\n",
     "            ),\n",
     "         buttons=list([   \n",
-    "            dict(label = '30 ms',\n",
+    "            dict(label = '3 deg',\n",
     "                 method = 'update',\n",
-    "                 args = [{'visible': [True, False, False, False, True]},\n",
+    "                 args = [{'visible': [True, False, False, True]},\n",
     "                         ]),\n",
-    "            dict(label = '530 ms',\n",
+    "            dict(label = '20 deg',\n",
     "                 method = 'update',\n",
-    "                 args = [{'visible': [False, True, False, False, True]},\n",
-    "                         ]),\n",
-    "            dict(label = '1030 ms',\n",
+    "                 args = [{'visible': [False, True, False, True]},\n",
+    "                           ]),\n",
+    "            dict(label = 'B<sub>1</sub> map',\n",
     "                 method = 'update',\n",
-    "                 args = [{'visible': [False, False, True, False, True]},\n",
-    "                         ]),\n",
-    "            dict(label = '1530 ms',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [False,False, False, True, True]},\n",
-    "                         ])\n",
-    "        ]),\n",
+    "                 args = [{'visible': [False, False, True, True]},\n",
+    "                           ])\n",
+    "        ])\n",
     "    )\n",
     "])\n",
     "\n",
@@ -680,7 +677,7 @@
     "            x=0.02,\n",
     "            y=-0.15,\n",
     "            showarrow=False,\n",
-    "            text='TI:',\n",
+    "            text='FA:',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -691,13 +688,13 @@
     "    ],\n",
     "    xaxis = dict(range = [0,127], autorange = False,\n",
     "             showgrid = False, zeroline = False, showticklabels = False,\n",
-    "             ticks = '', domain=[0, 0.6]),\n",
+    "             ticks = '', domain=[0, 0.58]),\n",
     "    yaxis = dict(range = [0,127], autorange = False,\n",
     "             showgrid = False, zeroline = False, showticklabels = False,\n",
     "             ticks = '', domain=[0, 1]),\n",
     "    xaxis2 = dict(range = [0,127], autorange = False,\n",
     "             showgrid = False, zeroline = False, showticklabels = False,\n",
-    "             ticks = '', domain=[0.4, 1]),\n",
+    "             ticks = '', domain=[0.40, 0.98]),\n",
     "    yaxis2 = dict(range = [0,127], autorange = False,\n",
     "             showgrid = False, zeroline = False, showticklabels = False,\n",
     "             ticks = '', domain=[0, 1], anchor='x2'),\n",
