--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -614,6 +614,211 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Octave"
+   },
+   "outputs": [],
+   "source": [
+    "%% MATLAB/OCTAVE CODE\n",
+    "% Code used to generate the data required for Figure 4 of the blog post\n",
+    "\n",
+    "clear all\n",
+    "\n",
+    "%% Setup parameters\n",
+    "% All times are in milliseconds\n",
+    "% All flip angles are in degrees\n",
+    "\n",
+    "% White matter\n",
+    "params.T1 = 900; % in milliseconds\n",
+    "params.T2 = 100;\n",
+    "params.TR = 25;\n",
+    "params.TE = 5;\n",
+    "params.EXC_FA = 1:90;\n",
+    "Nex_range = 1:1:100;\n",
+    "\n",
+    "%% Calculate signals\n",
+    "%\n",
+    "% To see all the options available, run `help vfa_t1.analytical_solution`\n",
+    "\n",
+    "for ii = 1:length(Nex_range)\n",
+    "    disp(ii)\n",
+    "    params.Nex = Nex_range(ii);\n",
+    "    \n",
+    "    params.crushFlag = 1;\n",
+    "    \n",
+    "    [~, complex_signal] = vfa_t1.bloch_sim(params);\n",
+    "    signal_ideal_spoil(ii,:) = abs(complex_signal);\n",
+    "    \n",
+    "    \n",
+    "    params.inc = 117;\n",
+    "    params.partialDephasing = 1;\n",
+    "    params.partialDephasingFlag = 1;\n",
+    "    params.crushFlag = 0;\n",
+    "    \n",
+    "    [~, complex_signal] = vfa_t1.bloch_sim(params);\n",
+    "    signal_optimal_crush_and_rf_spoil(ii,:) = abs(complex_signal);\n",
+    "    \n",
+    "    params.inc = 0;\n",
+    "    params.partialDephasing = 0;\n",
+    "\n",
+    "    [~, complex_signal] = vfa_t1.bloch_sim(params);\n",
+    "    signal_no_gradient_and_rf_spoil(ii,:) = abs(complex_signal);\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "%get params --from Octave\n",
+    "%get Nex_range --from Octave\n",
+    "%get signal_ideal_spoil --from Octave\n",
+    "%get signal_optimal_crush_and_rf_spoil --from Octave\n",
+    "%get signal_no_gradient_and_rf_spoil --from Octave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "# PYTHON CODE\n",
+    "\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "data1 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_ideal_spoil[ii]))),\n",
+    "        name = 'Ideal Spoiling',\n",
+    "        text = 'Ideal Spoiling',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
+    "\n",
+    "data1[39]['visible'] = True\n",
+    "\n",
+    "data2 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_optimal_crush_and_rf_spoil[ii]))),\n",
+    "        name = 'Optimal Gradient & RF Spoiling',\n",
+    "        text = 'Optimal Gradient & RF Spoiling',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
+    "\n",
+    "data2[39]['visible'] = True\n",
+    "\n",
+    "data3 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(signal_no_gradient_and_rf_spoil[ii]))),\n",
+    "        name = 'No Spoiling',\n",
+    "        text = 'No Spoiling',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
+    "\n",
+    "data3[39]['visible'] = True\n",
+    "\n",
+    "data = data1 + data2+ data3\n",
+    "\n",
+    "steps = []\n",
+    "for i in range(len(Nex_range)):\n",
+    "    step = dict(\n",
+    "        method = 'restyle',  \n",
+    "        args = ['visible', [False] * len(data1)],\n",
+    "        label = str(Nex_range[i])\n",
+    "        )\n",
+    "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
+    "    steps.append(step)\n",
+    "\n",
+    "sliders = [dict(\n",
+    "    x = 0,\n",
+    "    y = -0.02,\n",
+    "    active = 39,\n",
+    "    currentvalue = {\"prefix\": \"n<sup>th</sup> TR: <b>\"},\n",
+    "    pad = {\"t\": 50, \"b\": 10},\n",
+    "    steps = steps\n",
+    ")]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    width=580,\n",
+    "    height=450,\n",
+    "    margin=go.layout.Margin(\n",
+    "        l=80,\n",
+    "        r=40,\n",
+    "        b=60,\n",
+    "        t=10,\n",
+    "    ),\n",
+    "    annotations=[\n",
+    "        dict(\n",
+    "            x=0.5004254919715793,\n",
+    "            y=-0.18,\n",
+    "            showarrow=False,\n",
+    "            text='Excitation Flip Angle (°)',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=22\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=-0.15,\n",
+    "            y=0.5,\n",
+    "            showarrow=False,\n",
+    "            text='Signal',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=22\n",
+    "            ),\n",
+    "            textangle=-90,\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "    ],\n",
+    "    xaxis=dict(\n",
+    "        autorange=False,\n",
+    "        range=[0, params['EXC_FA'][-1]],\n",
+    "        showgrid=False,\n",
+    "        linecolor='black',\n",
+    "        linewidth=2\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        autorange=True,\n",
+    "        showgrid=False,\n",
+    "        linecolor='black',\n",
+    "        linewidth=2\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        x=0.5,\n",
+    "        y=0.9,\n",
+    "        traceorder='normal',\n",
+    "        font=dict(\n",
+    "            family='Times New Roman',\n",
+    "            size=12,\n",
+    "            color='#000'\n",
+    "        ),\n",
+    "        bordercolor='#000000',\n",
+    "        borderwidth=2\n",
+    "    ), \n",
+    "    sliders=sliders\n",
+    ")\n",
+    "\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "\n",
+    "iplot(fig, filename = 'basic-line', config = config)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "kernel": "Python3"
