--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -1003,8 +1003,8 @@
     "        text = params[\"EXC_FA\"],\n",
     "        mode = 'lines', \n",
     "        line = dict(\n",
-    "            color = ('rgb(22, 96, 167)'),\n",
-    "            ),\n",
+    "            color = ('rgb(0, 0, 0)'),\n",
+    "            dash = 'dot'),\n",
     "        hoverinfo='none')\n",
     "\n",
     "data2 = dict(\n",
@@ -1017,7 +1017,8 @@
     "        xaxis='x2',\n",
     "        yaxis='y2',\n",
     "        line = dict(\n",
-    "            color = ('rgb(22, 96, 167)'),\n",
+    "            color = ('rgb(0, 0, 0)'),\n",
+    "            dash = 'dot'\n",
     "            ),\n",
     "        hoverinfo='none',\n",
     "        showlegend=False)\n",
@@ -1030,10 +1031,14 @@
     "        text = [\"Flip angle: \" + str(x) + \"°\" for x in params[\"EXC_FA\"]],\n",
     "        mode = 'markers',\n",
     "        hoverinfo = 'y+text',\n",
+    "        line = dict(\n",
+    "            color = ('rgb(22, 96, 167)'),\n",
+    "            ),\n",
     "        error_y=dict(\n",
     "            type='data',\n",
     "            array=data_std,\n",
-    "            visible=True\n",
+    "            visible=True,\n",
+    "            color = ('rgb(142, 192, 240)')\n",
     "        ))\n",
     "\n",
     "data4 = dict(\n",
@@ -1046,15 +1051,20 @@
     "        xaxis='x2',\n",
     "        yaxis='y2',\n",
     "        hoverinfo = 'x+y+text',\n",
+    "        line = dict(\n",
+    "            color = ('rgb(205, 12, 24)'),\n",
+    "            ),\n",
     "        error_x=dict(\n",
     "            type='data',\n",
     "            array=data_std_div_tan,\n",
-    "            visible=True\n",
+    "            visible=True,\n",
+    "            color = ('rgb(248, 135, 142)')\n",
     "        ),\n",
     "        error_y=dict(\n",
     "            type='data',\n",
     "            array=data_std_div_sin,\n",
-    "            visible=True\n",
+    "            visible=True,\n",
+    "            color = ('rgb(248, 135, 142)')\n",
     "        ))\n",
     "\n",
     "data = [data1, data2, data3, data4]\n",
@@ -1073,7 +1083,7 @@
     "            x=0.5004254919715793,\n",
     "            y=-0.14,\n",
     "            showarrow=False,\n",
-    "            text='Excitation Flip Angle (°)',\n",
+    "            text='Excitation Flip Angle (<i>θ<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1085,7 +1095,7 @@
     "            x=-0.17,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='Long. Magnetization (M<sub>z</sub>)',\n",
+    "            text='Signal (<i>S<sub>n</sub></i>)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1135,7 +1145,7 @@
     "    ),\n",
     "    xaxis2=dict(\n",
     "        autorange=False,\n",
-    "        range=[signal_WM_div_tan[-1], signal_WM_div_tan[0]],\n",
+    "        range=[0, 1],\n",
     "        showgrid=False,\n",
     "        mirror=True,\n",
     "        overlaying= 'x',\n",
@@ -1146,7 +1156,7 @@
     "    ),\n",
     "    yaxis2=dict(\n",
     "        autorange=False,\n",
-    "        range=[signal_WM_div_sin[-1], signal_WM_div_sin[0]],\n",
+    "        range=[0, 1],\n",
     "        showgrid=False,\n",
     "        overlaying= 'y',\n",
     "        anchor= 'x',\n",
@@ -1155,7 +1165,7 @@
     "        linewidth=2\n",
     "    ),\n",
     "    legend=dict(\n",
-    "        x=0.30,\n",
+    "        x=0.32,\n",
     "        y=0.98,\n",
     "        traceorder='normal',\n",
     "        font=dict(\n",
@@ -1181,7 +1191,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Figure 6 displays an example brain dataset from an inversion recovery experiment, along with the T<sub>1</sub> map fitted using the RD-NLS technique.\n",
+    "Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text \n",
     "</p>\n",
     "</div>"
    ]
@@ -1195,7 +1205,254 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 6. Example variable flip angle dataset of a healthy adult brain (left).\n",
+    "Figure 6. B1 map\n",
+    "</b>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Octave"
+   },
+   "outputs": [],
+   "source": [
+    "%% MATLAB/OCTAVE CODE\n",
+    "% Code used to generate the data required for Figure 4 of the blog post\n",
+    "\n",
+    "clear all\n",
+    "\n",
+    "%% Setup parameters\n",
+    "% All times are in seconds\n",
+    "% All flip angles are in degrees\n",
+    "\n",
+    "nominal_EXC_FA = [3, 20]; % in degrees\n",
+    "params.TR = 0.025; % in seconds\n",
+    "\n",
+    "% White matter\n",
+    "params.T1 = 0.900; % in seconds\n",
+    "\n",
+    "% Range of B1 values biasing the excitation flip angle away from their nominal values\n",
+    "B1Range = 0.1:0.1:2;\n",
+    "\n",
+    "x.M0 = 1;\n",
+    "x.T1 = params.T1; % in seconds\n",
+    "\n",
+    "Model = vfa_t1; \n",
+    "\n",
+    "Opt.SNR = 100;\n",
+    "Opt.TR = params.TR;\n",
+    "Opt.T1 = x.T1;\n",
+    "\n",
+    "% Monte Carlo signal simulations\n",
+    "for ii = 1:1000\n",
+    "    for jj = 1:length(B1Range)\n",
+    "        B1 = B1Range(jj);\n",
+    "        actual_EXC_FA = B1 * nominal_EXC_FA;\n",
+    " \n",
+    "        params.EXC_FA = actual_EXC_FA;\n",
+    "\n",
+    "        clear Model.Prot.VFAData.Mat(:,1)\n",
+    "        Model.Prot.VFAData.Mat = zeros(length(params.EXC_FA),2);\n",
+    "        Model.Prot.VFAData.Mat(:,1) = params.EXC_FA';\n",
+    "        Model.Prot.VFAData.Mat(:,2) = Opt.TR;\n",
+    "\n",
+    "        [FitResult{ii,jj}, noisyData{ii,jj}] = Model.Sim_Single_Voxel_Curve(x,Opt,0); \n",
+    "        noisyData_array(ii,jj,:) = noisyData{ii,jj}.VFAData;\n",
+    "    end\n",
+    "end\n",
+    "%\n",
+    "Model = vfa_t1; \n",
+    "    \n",
+    "FlipAngle = nominal_EXC_FA';\n",
+    "TR = params.TR .* ones(size(FlipAngle));\n",
+    "\n",
+    "Model.Prot.VFAData.Mat = [FlipAngle TR];\n",
+    "\n",
+    "data.VFAData(:,:,1,1) = noisyData_array(:,:,1);\n",
+    "data.VFAData(:,:,1,2) = noisyData_array(:,:,2);\n",
+    "data.Mask = repmat(ones(size(B1Range)),[size(noisyData_array,1),1]);\n",
+    "\n",
+    "data.B1map = repmat(ones(size(B1Range)),[size(noisyData_array,1),1]);\n",
+    "FitResults_noB1Correction = FitData(data,Model,0);\n",
+    "\n",
+    "data.B1map = repmat(B1Range,[size(noisyData_array,1),1]);\n",
+    "FitResults_withB1Correction = FitData(data,Model,0);\n",
+    "\n",
+    "%%\n",
+    "%\n",
+    "\n",
+    "mean_T1_noB1Correction = mean(FitResults_noB1Correction.T1);\n",
+    "mean_T1_withB1Correction = mean(FitResults_withB1Correction.T1);\n",
+    "std_T1_noB1Correction = std(FitResults_noB1Correction.T1);\n",
+    "std_T1_withB1Correction = std(FitResults_withB1Correction.T1);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3",
+    "tags": [
+     "scratch"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%get B1Range --from Octave\n",
+    "%get mean_T1_noB1Correction --from Octave\n",
+    "%get mean_T1_withB1Correction --from Octave\n",
+    "%get std_T1_noB1Correction --from Octave\n",
+    "%get std_T1_withB1Correction --from Octave\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3",
+    "tags": [
+     "scratch",
+     "report_output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# PYTHON CODE\n",
+    "\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "data1 = dict(\n",
+    "        visible = True,\n",
+    "        x = B1Range,\n",
+    "        y = mean_T1_noB1Correction,\n",
+    "        name = 'Nominal flip angles',\n",
+    "        text = 'Nominal flip angles',\n",
+    "        mode = 'lines+markers',\n",
+    "        hoverinfo = 'x+y+text',\n",
+    "        line = dict(\n",
+    "            color = ('rgb(22, 96, 167)'),\n",
+    "            ),\n",
+    "        error_y=dict(\n",
+    "            type='data',\n",
+    "            array=std_T1_noB1Correction,\n",
+    "            visible=True,\n",
+    "            color = ('rgb(142, 192, 240)')\n",
+    "        ))\n",
+    "\n",
+    "data2 = dict(\n",
+    "        visible = True,\n",
+    "        x = B1Range,\n",
+    "        y = mean_T1_withB1Correction,\n",
+    "        name = 'B<sub>1</sub>-corrected flip angles',\n",
+    "        text = 'B<sub>1</sub>-corrected flip angles',\n",
+    "        mode = 'lines+markers',\n",
+    "        hoverinfo = 'x+y+text',\n",
+    "        line = dict(\n",
+    "            color = ('rgb(205, 12, 24)'),\n",
+    "            ),\n",
+    "        error_y=dict(\n",
+    "            type='data',\n",
+    "            array=std_T1_withB1Correction,\n",
+    "            visible=True,\n",
+    "            color = ('rgb(248, 135, 142)')\n",
+    "        ))\n",
+    "\n",
+    "data = [data1, data2]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    width=580,\n",
+    "    height=450,\n",
+    "    margin=go.layout.Margin(\n",
+    "        l=80,\n",
+    "        r=80,\n",
+    "        b=60,\n",
+    "        t=60,\n",
+    "    ),\n",
+    "    annotations=[\n",
+    "        dict(\n",
+    "            x=0.5004254919715793,\n",
+    "            y=-0.14,\n",
+    "            showarrow=False,\n",
+    "            text='B<sub>1</sub> (n.u.)',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=22\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=-0.17,\n",
+    "            y=0.5,\n",
+    "            showarrow=False,\n",
+    "            text='T<sub>1</sub> (s)',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=22\n",
+    "            ),\n",
+    "            textangle=-90,\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "    ],\n",
+    "    xaxis=dict(\n",
+    "        autorange=False,\n",
+    "        range=[B1Range[0], B1Range[-1]],\n",
+    "        showgrid=False,\n",
+    "        linecolor='black',\n",
+    "        linewidth=2\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        autorange=False,\n",
+    "        range=[0, max(mean_T1_noB1Correction)],\n",
+    "        showgrid=False,\n",
+    "        linecolor='black',\n",
+    "        linewidth=2\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        x=0.32,\n",
+    "        y=0.98,\n",
+    "        traceorder='normal',\n",
+    "        font=dict(\n",
+    "            family='Times New Roman',\n",
+    "            size=12,\n",
+    "            color='#000'\n",
+    "        ),\n",
+    "        bordercolor='#000000',\n",
+    "        borderwidth=2\n",
+    "    ), \n",
+    ")\n",
+    "\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "\n",
+    "iplot(fig, filename = 'basic-line', config = config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<div class=blog_body>\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Figure 7 displays an example brain dataset from an inversion recovery experiment, along with the T<sub>1</sub> map fitted using the RD-NLS technique.\n",
+    "</p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<div class=figure_caption>\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
+    "Figure 7. Example variable flip angle dataset of a healthy adult brain (left).\n",
     "</b>\n",
     "</div>"
    ]
