Refactor B1 figure - now call class method to find optimized flip angles for T1 and TR, and use those instead

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -718,8 +718,8 @@
     "        mode = 'lines',\n",
     "        x = params[\"EXC_FA\"],\n",
     "        y = abs(np.squeeze(np.asarray(signal_optimal_crush_and_rf_spoil[ii]))),\n",
-    "        name = 'Optimal Gradient & RF Spoiling',\n",
-    "        text = 'Optimal Gradient & RF Spoiling',\n",
+    "        name = 'Gradient & RF Spoiling',\n",
+    "        text = 'Gradient & RF Spoiling',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
     "data2[10]['visible'] = True\n",
@@ -1227,11 +1227,18 @@
     "% All times are in seconds\n",
     "% All flip angles are in degrees\n",
     "\n",
-    "nominal_EXC_FA = [3, 20]; % in degrees\n",
     "params.TR = 0.025; % in seconds\n",
     "\n",
     "% White matter\n",
     "params.T1 = 0.900; % in seconds\n",
+    "\n",
+    "% Calculate optimal flip angles for a two flip angle VFA experiment (for this T1 and TR)\n",
+    "% The will be the nominal flip angles (the flip angles assumed by the \"user\", before a \n",
+    "% \"realistic\"B1 bias is applied)\n",
+    "\n",
+    "nominal_EXC_FA = vfa_t1.find_two_optimal_flip_angles(params); % in degrees\n",
+    "disp('Nominal flip angles:')\n",
+    "disp(nominal_EXC_FA)\n",
     "\n",
     "% Range of B1 values biasing the excitation flip angle away from their nominal values\n",
     "B1Range = 0.1:0.1:2;\n",
